Ready for the bot

--- a/conf/opds_search_service-default.properties
+++ b/conf/opds_search_service-default.properties
@@ -8,3 +8,6 @@ proxyPort=3128
 
 # set to http/socks4/socks5
 proxyType=socks5
+
+# the host to access Flibusta
+flibustaHost=http://flibustahezeous3.onion
