--- a/conf/logging-default.properties
+++ b/conf/logging-default.properties
@@ -14,7 +14,7 @@ javax.servlet.level = OFF
 # File handler properties
 # Write the log file in the current directory, truncate at 500KB, 
 # use single log file, limit file messages to FINE and above
-#java.util.logging.FileHandler.pattern = testbot.log
+java.util.logging.FileHandler.pattern = opds_search_service.log
 java.util.logging.FileHandler.limit = 500000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.level = OFF
